# CEUE-Certificate-Emission

./: .gitignore  LICENSE  README.md  converter.py  pyproject.toml  temp_certificate.docx
